work on movie app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,4 +101,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-  # String apikey = 'fccb5cd21086576934df49607008368d';
+  # Sak = 'fccb5cd21086576934df49607008368d';
